--- a/Logbook1.ipynb
+++ b/Logbook1.ipynb
@@ -164,10 +164,98 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "list a is ... [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+      "list b is ... [0, 5, 10, 15, 20, 25]\n",
+      "The type of a is now ... <class 'list'> \n",
+      "\n",
+      "Set a is ... {0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10}\n",
+      "Set b is ... {0, 5, 10, 15, 20, 25}\n",
+      "The type of a is now ... <class 'set'>\n",
+      "Intersect of a and b is {0, 10, 5}\n",
+      "Union of a and b is {0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 15, 20, 25}\n",
+      "Items unique to set b are {25, 20, 15} \n",
+      "\n",
+      "topscores dictionary keys are dict_keys(['Jo', 'Sue', 'Tara', 'Mike'])\n",
+      "topscores dictionary values are dict_values([999, 987, 960, 870])\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [0,1,2,3,4,5,6,7,8,9,10] \n",
+    "b = [0,5,10,15,20,25]\n",
+    "topscores = {\"Jo\":999, \"Sue\":987, \"Tara\":960, \"Mike\":870}\n",
+    "\n",
+    "print(\"list a is ...\",a)\n",
+    "print(\"list b is ...\",b)\n",
+    "print(\"The type of a is now ...\",type(a),\"\\n\")\n",
+    "a = set(a)\n",
+    "b = set(b)\n",
+    "\n",
+    "print(\"Set a is ...\",a)\n",
+    "print(\"Set b is ...\",b)\n",
+    "print(\"The type of a is now ...\",type(a))\n",
+    "print(\"Intersect of a and b is\",a & b )\n",
+    "print(\"Union of a and b is\",a | b )\n",
+    "print(\"Items unique to set b are\",b-a , \"\\n\")\n",
+    "\n",
+    "print(\"topscores dictionary keys are\", topscores.keys())\n",
+    "print(\"topscores dictionary values are\", topscores.values())\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <font color=\"red\">Logbook Exercise 4</font> ###\n",
+    "\n",
+    "Create a 'code' cell below. In this do the following:\n",
+    "- Given the following 4 lists of names, house number and street addresses, towns and postcodes ...  \n",
+    "\n",
+    "```\n",
+    "[\"T Cruise\",\"D Francis\",\"C White\"]\n",
+    "[\"2 West St\",\"65 Deadend Cls\",\"15 Magdalen Rd\"]\n",
+    "[\"Canterbury\", \"Reading\", \"Oxford\"]\n",
+    "[\"CT8 23RD\", \"RG4 1FG\", \"OX4 3AS\"]\n",
+    "```\n",
+    "\n",
+    "- write a Custom 'address_machine' function that formats 'name', 'hs_number_street', 'town', 'postcode' with commas and spaces between items\n",
+    "- create a 'newlist' that repeatedly calls 'address_machine' and 'zips' items from the 4 lists\n",
+    "- write a 'for loop' that iterates over 'new list' and prints each name and address on a separate line\n",
+    "- the output should appear as follows\n",
+    "\n",
+    "```\n",
+    "T Cruise, 2 West St, Canterbury, CT8 23RD\n",
+    "D Francis, 65 Deadend Cls, Reading, RG4 1FG\n",
+    "C White, 15 Magdalen Rd, Oxford, OX4 3AS\n",
+    "```\n",
+    "\n",
+    "- <font color=\"red\">HINT:</font> look at \"# CUSTOM FUNCTION WORKED EXAMPLES 3 & 4\" above"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "house_numbers = [\"T Cruise\",\"D Francis\",\"C White\"]\n",
+    "street_addresses = [\"2 West St\",\"65 Deadend Cls\",\"15 Magdalen Rd\"]\n",
+    "towns = [\"Canterbury\", \"Reading\", \"Oxford\"]\n",
+    "postcodes = [\"CT8 23RD\", \"RG4 1FG\", \"OX4 3AS\"]\n",
+    "\n",
+    "def address_machine():\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
