--- a/Logbook1.ipynb
+++ b/Logbook1.ipynb
@@ -244,16 +244,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T Cruise, 2 West St, Canterbury, CT8 23RD\n",
+      "D Francis, 65 Deadend Cls, Reading, RG4 1FG\n",
+      "C White, 15 Magdalen Rd, Oxford, OX4 3AS\n"
+     ]
+    }
+   ],
    "source": [
-    "house_numbers = [\"T Cruise\",\"D Francis\",\"C White\"]\n",
-    "street_addresses = [\"2 West St\",\"65 Deadend Cls\",\"15 Magdalen Rd\"]\n",
+    "names = [\"T Cruise\",\"D Francis\",\"C White\"]\n",
+    "house_numbers = [\"2 West St\",\"65 Deadend Cls\",\"15 Magdalen Rd\"]\n",
     "towns = [\"Canterbury\", \"Reading\", \"Oxford\"]\n",
     "postcodes = [\"CT8 23RD\", \"RG4 1FG\", \"OX4 3AS\"]\n",
     "\n",
-    "def address_machine():\n",
+    "def address_machine(name, hs_number_street, town, postcode):\n",
+    "    return f\"{name}, {hs_number_street}, {town}, {postcode}\"\n",
+    "\n",
+    "newlist = [address_machine(*address) for address in zip(names, house_numbers, towns, postcodes)]\n",
+    "\n",
+    "for x in newlist:\n",
+    "    print(x)\n",
     "    "
    ]
   }
