--- a/Logbook1.ipynb
+++ b/Logbook1.ipynb
@@ -272,6 +272,94 @@
     "    print(x)\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color=\"red\">Logbook Exercise 5</font> ##\n",
+    "\n",
+    "Create a 'code' cell below. In this do the following:\n",
+    "- Create a super class \"Person\" that takes three string and one integer parameters for first and second name, UK Postcode and age in years.\n",
+    "- Give \"Person\" a method \"greeting\" that prints a statement along the lines \"Hello, my name is Freddy Jones. I am 22 years old and my postcode is HP6 7AJ\"\n",
+    "- Create a \"Student\" class that extends/inherits \"Person\" and takes additional parameters for degree_subject and student_ID.\n",
+    "- give \"Student\" a \"studentGreeting\" method that prints a statement along the lines \"My student ID is SN123456 and I am reading Computer Science\"\n",
+    "- Use either Python {} format or C-type %s/%d notation to format output strings\n",
+    "- Create 3 student objects and persist these in a list\n",
+    "- Iterate over the three objects and call their \"greeting\" and \"studentGreeting\" methods\n",
+    "- Output should be along the lines of the following\n",
+    "\n",
+    "```\n",
+    "Hello, my name is Dick Turpin. I am 32 years old and my postcode is HP11 2JZ\n",
+    "My student ID is DT123456 and I am reading Highway Robbery\n",
+    " \n",
+    "Hello, my name is Dorothy Turpin. I am 32 years old and my postcode is SO14 7AA\n",
+    "My student ID is DT123457 and I am reading Law\n",
+    " \n",
+    "Hello, my name is Oliver Cromwell. I am 32 years old and my postcode is OX35 14RE\n",
+    "My student ID is OC123456 and I am reading History\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello my name is Entwan Enkhbayar I am 69 years old and my postcode is HP11 ***\n",
+      "My student id is 22135347 and i am doing AI\n",
+      " \n",
+      "Hello my name is Dorothy Turpin I am 32 years old and my postcode is SO14 7AA\n",
+      "My student id is 22696969 and i am doing Law\n",
+      " \n",
+      "Hello my name is Oliver Cromwell I am 32 years old and my postcode is OX35 14RE\n",
+      "My student id is 2200000 and i am doing history\n",
+      " \n"
+     ]
+    }
+   ],
+   "source": [
+    "class Person:\n",
+    "    def __init__(self,f_name,l_name,postcode,age):\n",
+    "        self.f_name = f_name\n",
+    "        self.l_name = l_name\n",
+    "        self.postcode = postcode\n",
+    "        self.age = age\n",
+    "    \n",
+    "    def greeting(self):\n",
+    "        print(\"Hello my name is\", self.f_name, self.l_name, \"I am\", self.age,\"years old and my postcode is\", self.postcode )\n",
+    "    \n",
+    "class Student(Person):\n",
+    "    def __init__(self,f_name,l_name,postcode,age,degree_subject,id):\n",
+    "        super().__init__(f_name,l_name,postcode,age)\n",
+    "        self.degree_subject = degree_subject\n",
+    "        self.id = id\n",
+    "    def student_greeting(self):\n",
+    "        print(\"My student id is\", self.id,\"and i am doing\", self.degree_subject)\n",
+    "    \n",
+    "student1 = Student(\"Entwan\",\"Enkhbayar\",\"HP11 ***\",69,\"AI\",22135347)\n",
+    "student2 = Student(\"Dorothy\",\"Turpin\",\"SO14 7AA\",32,\"Law\",22696969)\n",
+    "student3 = Student(\"Oliver\",\"Cromwell\",\"OX35 14RE\",32,\"history\",2200000)\n",
+    "\n",
+    "students = []\n",
+    "def add_student(s):\n",
+    "    students.append(s)\n",
+    "\n",
+    "add_student(student1)\n",
+    "add_student(student2)\n",
+    "add_student(student3)\n",
+    "\n",
+    "for s in students:\n",
+    "    s.greeting()\n",
+    "    s.student_greeting()\n",
+    "    print(\" \")\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
