--- a/Logbook1.ipynb
+++ b/Logbook1.ipynb
@@ -360,6 +360,235 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color=\"red\">Logbook Exercise 6</font> ##\n",
+    "\n",
+    "Insert a 'code' cell below. In this do the following:\n",
+    "\n",
+    "- 1 - Define a Node class and a (singly) LinkedList class.\n",
+    "- 2 - Now create five instances (objects) of the Node class and 'add' them to an instance of the LinkedList. Print this data to the screen to check that the node objects have been added correctly from.\n",
+    "- 3 - Test the search method. Check that a node can be found (print an appropriate message to the screen). Also check that a message is displayed when you search for a node that is not in the list.  \n",
+    "- 4 - Test that you can remove both the start of the list and a node in the middle of the list. Print before and after to check that this works.\n",
+    "- 5 - Now add another attribute to the Node class. Remove all the older nodes still remaining in the list, and add new node objects with values for this new attribute. \n",
+    "- 6 - Now amend (or overload if necessary) the exisiting search method so that you can search for nodes via either of the two attributes. Test that this works as expected.  \n",
+    "- 7 - Notice that you have an 'insert_beginning' function in the LinkedList class, which 'prepends' a new node to the start of the list. Now write an 'insert_end' function that will 'append' a new node to the end of the list. \n",
+    "- 8 - now add additional node instances to the list and check that adds them to the end of the list, rather than at the start of the list.\n",
+    "- 9 - Implement the updates suggested to modify the singly linked list to be a doubly linked list. Don't forget to update the insert_end method from the previous point! Check that you can navigate back and forth in the doubly linked list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data: 1, New Data: A\n",
+      "Data: 2, New Data: B\n",
+      "Data: 3, New Data: C\n",
+      "Data: 4, New Data: D\n",
+      "Data: 5, New Data: E\n",
+      "Node found: Data: 3, New Data: C\n",
+      "Node not found.\n",
+      "Before removing:\n",
+      "Data: 1, New Data: A\n",
+      "Data: 2, New Data: B\n",
+      "Data: 3, New Data: C\n",
+      "Data: 4, New Data: D\n",
+      "Data: 5, New Data: E\n",
+      "After removing:\n",
+      "Data: 2, New Data: B\n",
+      "Data: 4, New Data: D\n",
+      "Data: 5, New Data: E\n",
+      "Data: 6, New Data: F\n",
+      "Data: 7, New Data: G\n",
+      "Data: 8, New Data: H\n",
+      "Node not found.\n",
+      "Data: 6, New Data: F\n",
+      "Data: 7, New Data: G\n",
+      "Data: 8, New Data: H\n",
+      "Data: 9, New Data: I\n",
+      "Data: 10, New Data: J\n",
+      "Data: 1, New Data: A\n",
+      "Data: 2, New Data: B\n",
+      "Data: 3, New Data: C\n",
+      "Data: 1, New Data: A\n",
+      "Data: 2, New Data: B\n",
+      "Data: 3, New Data: C\n",
+      "Data: 4, New Data: D\n",
+      "Data: 5, New Data: E\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, data, new_data=None):\n",
+    "        self.data = data\n",
+    "        self.new_data = new_data\n",
+    "        self.next = None\n",
+    "\n",
+    "class LinkedList:\n",
+    "    def __init__(self):\n",
+    "        self.head = None\n",
+    "\n",
+    "    def append(self, data, new_data=None):\n",
+    "        new_node = Node(data, new_data)\n",
+    "        if not self.head:\n",
+    "            self.head = new_node\n",
+    "        else:\n",
+    "            current = self.head\n",
+    "            while current.next:\n",
+    "                current = current.next\n",
+    "            current.next = new_node\n",
+    "\n",
+    "    def search(self, key, search_new_data=False):\n",
+    "        current = self.head\n",
+    "        while current:\n",
+    "            if search_new_data:\n",
+    "                if current.new_data == key:\n",
+    "                    return current\n",
+    "            elif current.data == key:\n",
+    "                return current\n",
+    "            current = current.next\n",
+    "        return None\n",
+    "\n",
+    "    def remove(self, key):\n",
+    "        current = self.head\n",
+    "        if current and current.data == key:\n",
+    "            self.head = current.next\n",
+    "            return\n",
+    "        prev = None\n",
+    "        while current and current.data != key:\n",
+    "            prev = current\n",
+    "            current = current.next\n",
+    "        if current:\n",
+    "            prev.next = current.next\n",
+    "\n",
+    "    def display(self):\n",
+    "        current = self.head\n",
+    "        while current:\n",
+    "            print(f\"Data: {current.data}, New Data: {current.new_data}\")\n",
+    "            current = current.next\n",
+    "\n",
+    "linked_list = LinkedList()\n",
+    "linked_list.append(1, 'A')\n",
+    "linked_list.append(2, 'B')\n",
+    "linked_list.append(3, 'C')\n",
+    "linked_list.append(4, 'D')\n",
+    "linked_list.append(5, 'E')\n",
+    "linked_list.display()\n",
+    "\n",
+    "#Testing the search method here\n",
+    "result = linked_list.search(3)\n",
+    "if result:\n",
+    "    print(f\"Node found: Data: {result.data}, New Data: {result.new_data}\")\n",
+    "else:\n",
+    "    print(\"Node not found.\")\n",
+    "\n",
+    "result = linked_list.search('X')\n",
+    "if result:\n",
+    "    print(f\"Node found: Data: {result.data}, New Data: {result.new_data}\")\n",
+    "else:\n",
+    "    print(\"Node not found.\")\n",
+    "\n",
+    "#Removing nodes\n",
+    "print(\"Before removing:\")\n",
+    "linked_list.display()\n",
+    "linked_list.remove(1)  # Remove the start of the list\n",
+    "linked_list.remove(3)  # Remove a node in the middle of the list\n",
+    "print(\"After removing:\")\n",
+    "linked_list.display()\n",
+    "\n",
+    "#Add a new attribute and update nodes\n",
+    "linked_list.remove(2)\n",
+    "linked_list.remove(4)\n",
+    "linked_list.remove(5)\n",
+    "linked_list.append(6, 'F')\n",
+    "linked_list.append(7, 'G')\n",
+    "linked_list.append(8, 'H')\n",
+    "linked_list.display()\n",
+    "\n",
+    "#Amend the search method to search by either attribute\n",
+    "result = linked_list.search(7, search_new_data=True)\n",
+    "if result:\n",
+    "    print(f\"Node found: Data: {result.data}, New Data: {result.new_data}\")\n",
+    "else:\n",
+    "    print(\"Node not found.\")\n",
+    "\n",
+    "#Add an 'insert_end' function to the LinkedList class\n",
+    "def insert_end(self, data, new_data=None):\n",
+    "    new_node = Node(data, new_data)\n",
+    "    if not self.head:\n",
+    "        self.head = new_node\n",
+    "    else:\n",
+    "        current = self.head\n",
+    "        while current.next:\n",
+    "            current = current.next\n",
+    "        current.next = new_node\n",
+    "\n",
+    "LinkedList.insert_end = insert_end\n",
+    "\n",
+    "#Add additional nodes to the end of the list\n",
+    "linked_list.insert_end(9, 'I')\n",
+    "linked_list.insert_end(10, 'J')\n",
+    "linked_list.display()\n",
+    "\n",
+    "#Modify the singly linked list to be a doubly linked list\n",
+    "class DoublyNode:\n",
+    "    def __init__(self, data, new_data=None):\n",
+    "        self.data = data\n",
+    "        self.new_data = new_data\n",
+    "        self.next = None\n",
+    "        self.prev = None\n",
+    "\n",
+    "class DoublyLinkedList:\n",
+    "    def __init__(self):\n",
+    "        self.head = None\n",
+    "\n",
+    "    def append(self, data, new_data=None):\n",
+    "        new_node = DoublyNode(data, new_data)\n",
+    "        if not self.head:\n",
+    "            self.head = new_node\n",
+    "        else:\n",
+    "            current = self.head\n",
+    "            while current.next:\n",
+    "                current = current.next\n",
+    "            current.next = new_node\n",
+    "            new_node.prev = current\n",
+    "\n",
+    "    def insert_end(self, data, new_data=None):\n",
+    "        new_node = DoublyNode(data, new_data)\n",
+    "        if not self.head:\n",
+    "            self.head = new_node\n",
+    "        else:\n",
+    "            current = self.head\n",
+    "            while current.next:\n",
+    "                current = current.next\n",
+    "            current.next = new_node\n",
+    "            new_node.prev = current\n",
+    "\n",
+    "    def display(self):\n",
+    "        current = self.head\n",
+    "        while current:\n",
+    "            print(f\"Data: {current.data}, New Data: {current.new_data}\")\n",
+    "            current = current.next\n",
+    "\n",
+    "doubly_linked_list = DoublyLinkedList()\n",
+    "doubly_linked_list.append(1, 'A')\n",
+    "doubly_linked_list.append(2, 'B')\n",
+    "doubly_linked_list.append(3, 'C')\n",
+    "doubly_linked_list.display()\n",
+    "\n",
+    "doubly_linked_list.insert_end(4, 'D')\n",
+    "doubly_linked_list.insert_end(5, 'E')\n",
+    "doubly_linked_list.display()\n"
+   ]
   }
  ],
  "metadata": {
