--- a/Logbook1.ipynb
+++ b/Logbook1.ipynb
@@ -382,6 +382,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6->5->4->3->2->NULL\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Node:\n",
+    "  def __init__(self, value, next_node=None):\n",
+    "    self.value = value\n",
+    "    self.next_node = next_node\n",
+    "    \n",
+    "  def get_value(self):\n",
+    "    return self.value\n",
+    "  \n",
+    "  def get_next_node(self):\n",
+    "    return self.next_node\n",
+    "  \n",
+    "  def set_next_node(self, next_node):\n",
+    "    self.next_node = next_node\n",
+    "\n",
+    "  \n",
+    "class LinkedList:\n",
+    "  def __init__(self, value=None):\n",
+    "    self.head_node = Node(value)\n",
+    "  \n",
+    "  def get_head_node(self):\n",
+    "    return self.head_node\n",
+    "  \n",
+    "  def insert_beginning(self, new_value):\n",
+    "    new_node = Node(new_value)\n",
+    "    new_node.set_next_node(self.head_node)\n",
+    "    self.head_node = new_node\n",
+    "    \n",
+    "  def stringify_list(self):\n",
+    "    string_list = \"\"\n",
+    "    current_node = self.get_head_node()\n",
+    "    while current_node:\n",
+    "      if current_node.get_value() != None:\n",
+    "        string_list += str(current_node.get_value()) + \"->\"\n",
+    "      current_node = current_node.get_next_node()\n",
+    "    string_list += \"NULL\"\n",
+    "    return string_list\n",
+    "\n",
+    "\n",
+    "ll = LinkedList(2)\n",
+    "ll.insert_beginning(3)\n",
+    "ll.insert_beginning(4)\n",
+    "ll.insert_beginning(5)\n",
+    "ll.insert_beginning(6)\n",
+    "print(ll.stringify_list())\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -589,6 +651,135 @@
     "doubly_linked_list.insert_end(5, 'E')\n",
     "doubly_linked_list.display()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color=\"red\">Logbook Exercise 7</font> ##\n",
+    "\n",
+    "Insert a 'code' cell below. In this do the following:\n",
+    "\n",
+    "- 1 - Write a function that uses a random number generator to populate a list with values between 0 and 9. Return the populated array and print to screen. \n",
+    "e.g: [7, 5, 1, 4, 9, 2, 6, 8, 0, 9]\n",
+    "- 2 - Now pass this array to the Bubble Sort method and print out the list to check it has been sorted.\n",
+    "- 3 - Now call the linear search function to check that you can find a number that has been randomly chosen within your list.\n",
+    "- 4 - Apply the binary search function to check that it can find the same value. \n",
+    "- 5 - Now reuse the function you wrote in step 1 and scale the size to 50,000 integers. DO NOT attempt to print the individual numbers to screen, but do check that the size of the array is 10,000 elements (hint: use the len() method)\n",
+    "- 6 - Now time how long it takes to run the bubble sort algorithm. Start the timer in the statement before calling the OPTIMISED bubble_sort method. Then stop the timer in the statement after the bubble_sort() method call. Output how long it took. \n",
+    "- 7 - Now generate a new unsorted list of 50,000 integers with values ranging from 0-9, and time how long it takes to sort using the OPTIMISED version of the Bubble sort algorithm. Output the time to the screen and compare against the UNOPTIMISED version.\n",
+    "- 8 - Now generate a new unsorted list of 50,000 integers with values ranging from 0-9, and time how long it takes to sort using the MERGE SORT algorithm. Output the time to the screen and compare against the optimised and unoptimised bubble sort algorithms. \n",
+    "- 9 - Now that you have sorted the array of 50,000 integers. Change the value of the last element of the data structure (49999) to the value 999. e.g. list[49999] = 999. Time how long it takes for the Binary Search method to find this 999 value. Also time how long it takes the Linear Search algorithm to find this 999 value. Output these times to the screen and observe if or how they differ.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color=\"red\">Logbook Exercise 8</font> ##\n",
+    "\n",
+    "Insert a 'code' cell below. In this do the following:\n",
+    "\n",
+    "- 1 - Instantiate the Stack class (copy from above). Push five integer values onto the stack object. Check that you can also 'Pop' these items off the stack and display their values to screen. What do you notice about the order of the items?\n",
+    "- 2 - Instantiate the Queue class - check that you can successfully insert (enqueue), and remove (dequeue) items. Also check the order of the removal (dequeue). Is the First In First Out principle implemented correctly.\n",
+    "- 3 - Now instantiate the HashMap class above. Create a Person class that has attributes for first_name, second_name and phone_number, and appropriate methods that get, set and print values for these attributes. Now instantiate the HashMap class and add Person objects to the HashMap.\n",
+    "- 4 - Now create a new class called LinkedStack. This class should be able to merge the functionality of the original LinkedList class and Stack class. Each object added to the LinkedStack, should be a separate linkedlist. So that when one object is 'popped' from the stack, you can also print the entire list from this object returned from the stack.\n",
+    "- 5 - Now do the same for the Queue - create a LinkedQueue class that enables items stored in the queue to link the remainder of other linkedlists.\n",
+    "- 6 - Extend the hash_map class to create a linked list in each element position where there is a collision. A colliding item should be added to the end of a linked list for that index position.\n",
+    "\n",
+    "![hashseparatechaining](http://algs4.cs.princeton.edu/34hash/images/separate-chaining.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color=\"red\">Logbook Exercise 9</font> ##\n",
+    "\n",
+    "Insert a 'code' cell below. In this do the following:\n",
+    "\n",
+    "- 1 - Implement the Binary Search Tree class as described above.\n",
+    "- 2 - Create a small dataset of integers and insert these nodes into an object of the BST class. For simplicity, generate a dataset which size is 'odd' so there is a natural mid point. Also avoid duplicate values. (Is there a Python structure which ignores duplicate values? Think back to an earlier lecture...)\n",
+    "- 3 - Check that you can traverse the tree in order. \n",
+    "- 4 - Check that you can successfully retreive (search for) a node within the Tree. Check positive and negative cases (what happens when the item does not exist).\n",
+    "- 5 - Now generate a small dataset of single letters. Generate an odd size, and avoid duplicates again.\n",
+    "- 6 - Think about how you will insert these nodes into the tree... can they be added in the order they were generated?\n",
+    "- 7 - Once you have decided how to insert these into a BST, check that these were added in alphabetical order, by printing out the tree in order.   \n",
+    "- 8 - Study the remove_child method given above for a non-binary search tree. Are you able to use some of that code for a method that will remove a node from a BST? Your task is to code a remove_child method for the BST so it can remove any node from any position in the tree (leaf, parent, or root). You'll need to thoroughly test this to check that node references are maintained, and the correct node is made the parent.\n",
+    "- 9 - Challenge: Rather than printing out a vertical list of the tree nodes, can you print in the BST nodes in the arrangement shown in diagrams above? Are you able to format the print out of tree elements to look something like the below which shows the nodes and their edges:\n",
+    "\n",
+    "\n",
+    "         D\n",
+    "       /   \\ \n",
+    "      C     F\n",
+    "           / \\\n",
+    "          E   G"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color=\"red\">Logbook Exercise 10</font> ##\n",
+    "\n",
+    "Insert a 'code' cell below. In this do the following:\n",
+    "\n",
+    "- 1 - First implement a standard (non-binary) tree class. Remember that levels in a non-binary tree can have more than two children.\n",
+    "- 2 - Now insert nodes with values of single letters (A-Z) in your tree at a variety of levels. For this exercise, it would be best to avoid duplicates again. At least four levels are recommended.\n",
+    "- 3 - Now, copy the BFS code from above, and modify it so that it works with your Queue class that you have written previously. \n",
+    "- 4 - Implement BFS on your sample tree, and direct it towards one of the nodes within your tree. Run this several times to check that it correctly finds the path to the target node. Feel free to print the tree so you can check whether it returns the correct path.\n",
+    "- 5 - Now, copy the DFS code from above, and modify it to work with your Stack class written previously. \n",
+    "- 6 - Implement DFS on the same dataset. Check this correctly finds the path to the target node specified. \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color=\"red\">Logbook Exercise 11</font> ##\n",
+    "\n",
+    "Your last logbook is a challenge! \n",
+    "\n",
+    "Your task: <b>Write a function called is_symmetrical that accepts a tree as an argument. This function should establish whether any tree (BST or non-binary) has the same number of nodes stored on each branch of the tree. The function should return True if the tree passed in is symmetrical, and should return False if not.</b>\n",
+    "\n",
+    "Insert a 'code' cell below and write an algorithm to solve this task. You are advised to test this function on several trees of different sizes and contents. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
