Updated linked list

--- a/Logbook1.ipynb
+++ b/Logbook1.ipynb
@@ -382,14 +382,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6->5->4->3->2->NULL\n"
+      "6->5->4->3->2->NULL\n",
+      "\n",
+      "value 5 is found \n",
+      "\n",
+      "value 7 is found \n",
+      "\n",
+      "Value 5 is removed, and here is the updated list:\n",
+      "6->4->3->2->NULL\n",
+      "\n",
+      "Value 9 is not found in the list.\n",
+      "6->4->3->2->NULL\n",
+      "\n",
+      "Value 6 is removed, and here is the updated list:\n",
+      "4->3->2->NULL\n",
+      "\n",
+      "Value 3 is removed, and here is the updated list:\n",
+      "4->2->NULL\n",
+      "\n"
      ]
     }
    ],
@@ -397,6 +414,7 @@
     "class Node:\n",
     "  def __init__(self, value, next_node=None):\n",
     "    self.value = value\n",
+    "    #self.attribute = attribute\n",
     "    self.next_node = next_node\n",
     "    \n",
     "  def get_value(self):\n",
@@ -420,7 +438,8 @@
     "    new_node = Node(new_value)\n",
     "    new_node.set_next_node(self.head_node)\n",
     "    self.head_node = new_node\n",
-    "    \n",
+    "  \n",
+    " \n",
     "  def stringify_list(self):\n",
     "    string_list = \"\"\n",
     "    current_node = self.get_head_node()\n",
@@ -430,6 +449,46 @@
     "      current_node = current_node.get_next_node()\n",
     "    string_list += \"NULL\"\n",
     "    return string_list\n",
+    "  \n",
+    "  def print(self):\n",
+    "    print(self.stringify_list() + \"\\n\")\n",
+    "\n",
+    "  def search(self, searching_value):\n",
+    "    # Initialize current to head\n",
+    "    current = self.get_head_node()\n",
+    "    # loop till current not equal to None\n",
+    "    while current is not None:\n",
+    "        if current.value == searching_value:\n",
+    "            print(\"value\", searching_value, \"is found \\n\")\n",
+    "            return current.value\n",
+    "            break\n",
+    "\n",
+    "        current = current.get_next_node()\n",
+    "\n",
+    "    # This statement should be inside the loop\n",
+    "    else:\n",
+    "        print(\"value\", searching_value, \"is found \\n\" )  \n",
+    "  \n",
+    "  def remove_node(self, value_to_remove):\n",
+    "    current_node = self.get_head_node()\n",
+    "\n",
+    "    if current_node.get_value() == value_to_remove:\n",
+    "        self.head_node = current_node.get_next_node()\n",
+    "        print(\"Value\",value_to_remove,\"is removed, and here is the updated list:\")\n",
+    "        self.print()\n",
+    "        return\n",
+    "\n",
+    "    while current_node:\n",
+    "        next_node = current_node.get_next_node()\n",
+    "\n",
+    "        if next_node and next_node.get_value() == value_to_remove:\n",
+    "            current_node.set_next_node(next_node.get_next_node())\n",
+    "            print(\"Value\",value_to_remove,\"is removed, and here is the updated list:\")\n",
+    "            self.print()\n",
+    "            return\n",
+    "\n",
+    "        current_node = next_node\n",
+    "    print(\"Value\",value_to_remove,\"is not found in the list.\")\n",
     "\n",
     "\n",
     "ll = LinkedList(2)\n",
@@ -437,7 +496,23 @@
     "ll.insert_beginning(4)\n",
     "ll.insert_beginning(5)\n",
     "ll.insert_beginning(6)\n",
-    "print(ll.stringify_list())\n",
+    "ll.print()\n",
+    "\n",
+    "\n",
+    "\n",
+    "ll.search(5)\n",
+    "ll.search(7)\n",
+    "\n",
+    "\n",
+    "ll.remove_node(5)\n",
+    "ll.remove_node(9)\n",
+    "\n",
+    "#Ex4\n",
+    "ll.print()\n",
+    "ll.remove_node(6)\n",
+    "ll.remove_node(3)\n",
+    "\n",
+    "\n",
     "\n",
     "\n"
    ]
