--- a/Logbook1.ipynb
+++ b/Logbook1.ipynb
@@ -382,39 +382,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6->5->4->3->2->NULL\n",
+      "6 (e) -> 5 (d) -> 4 (c) -> 3 (b) -> 2 (a) -> NULL\n",
       "\n",
-      "value 5 is found \n",
+      "Value 5 is found\n",
       "\n",
-      "value 7 is found \n",
+      "Value 7 is not found in the list.\n",
       "\n",
-      "Value 5 is removed, and here is the updated list:\n",
-      "6->4->3->2->NULL\n",
+      "6 (e) -> 5 (d) -> 4 (c) -> 3 (b) -> 2 (a) -> NULL\n",
       "\n",
-      "Value 9 is not found in the list.\n",
-      "6->4->3->2->NULL\n",
+      "Node with value 6 is removed, and here is the updated list: \n",
       "\n",
-      "Value 6 is removed, and here is the updated list:\n",
-      "4->3->2->NULL\n",
+      "5 (d) -> 4 (c) -> 3 (b) -> 2 (a) -> NULL\n",
       "\n",
-      "Value 3 is removed, and here is the updated list:\n",
-      "4->2->NULL\n",
+      "Node with value 3 is removed, and here is the updated list: \n",
+      "\n",
+      "5 (d) -> 4 (c) -> 2 (a) -> NULL\n",
+      "\n",
+      "Node with value 9 is not found in the list. \n",
+      "\n",
+      "Node with letter a is removed, and here is the updated list: \n",
+      "\n",
+      "5 (d) -> 4 (c) -> NULL\n",
+      "\n",
+      "Value a is not found in the list.\n",
+      "\n",
+      "Value z is not found in the list.\n",
+      "\n",
+      "5 (d) -> 4 (c) -> 69 (x) -> NULL\n",
       "\n"
      ]
     }
    ],
    "source": [
     "class Node:\n",
-    "  def __init__(self, value, next_node=None):\n",
+    "  def __init__(self, value,letter, next_node=None):\n",
     "    self.value = value\n",
-    "    #self.attribute = attribute\n",
+    "    self.letter = letter\n",
     "    self.next_node = next_node\n",
     "    \n",
     "  def get_value(self):\n",
@@ -428,91 +438,118 @@
     "\n",
     "  \n",
     "class LinkedList:\n",
-    "  def __init__(self, value=None):\n",
-    "    self.head_node = Node(value)\n",
+    "  def __init__(self, value = None, attribute = None):\n",
+    "    self.head_node = Node(value,attribute)\n",
     "  \n",
     "  def get_head_node(self):\n",
     "    return self.head_node\n",
     "  \n",
-    "  def insert_beginning(self, new_value):\n",
-    "    new_node = Node(new_value)\n",
+    "  def insert_beginning(self, new_value, new_letter=None):\n",
+    "    new_node = Node(new_value, new_letter)\n",
     "    new_node.set_next_node(self.head_node)\n",
     "    self.head_node = new_node\n",
     "  \n",
+    "  def insert_end(self, new_value, new_letter=None ):\n",
+    "    new_node = Node(new_value, new_letter)\n",
+    "  \n",
+    "  def insert_end(self, new_value, new_letter=None):\n",
+    "        new_node = Node(new_value, new_letter)\n",
+    "        if not self.head_node:\n",
+    "            self.head_node = new_node\n",
+    "            return\n",
+    "\n",
+    "        current = self.head_node\n",
+    "        while current.next_node:\n",
+    "            current = current.next_node\n",
+    "\n",
+    "        current.next_node = new_node\n",
+    "\n",
     " \n",
     "  def stringify_list(self):\n",
     "    string_list = \"\"\n",
     "    current_node = self.get_head_node()\n",
+    "    \n",
     "    while current_node:\n",
-    "      if current_node.get_value() != None:\n",
-    "        string_list += str(current_node.get_value()) + \"->\"\n",
+    "      if current_node.get_value() is not None:\n",
+    "        string_list += f\"{current_node.get_value()} ({current_node.letter}) -> \"\n",
     "      current_node = current_node.get_next_node()\n",
     "    string_list += \"NULL\"\n",
     "    return string_list\n",
     "  \n",
-    "  def print(self):\n",
+    "  def display(self):\n",
     "    print(self.stringify_list() + \"\\n\")\n",
     "\n",
-    "  def search(self, searching_value):\n",
-    "    # Initialize current to head\n",
+    "  def search(self, searching_value, search_type= \"value\"):\n",
     "    current = self.get_head_node()\n",
-    "    # loop till current not equal to None\n",
     "    while current is not None:\n",
-    "        if current.value == searching_value:\n",
-    "            print(\"value\", searching_value, \"is found \\n\")\n",
-    "            return current.value\n",
-    "            break\n",
-    "\n",
+    "        if search_type == \"value\" and current.value == searching_value:\n",
+    "            print(\"Value\", searching_value, \"is found\\n\")\n",
+    "            return True\n",
+    "        elif search_type == \"letter\" and current.letter == searching_value:\n",
+    "           print(\"Value\", searching_value, \"is found\\n\")\n",
+    "           return True\n",
     "        current = current.get_next_node()\n",
     "\n",
-    "    # This statement should be inside the loop\n",
-    "    else:\n",
-    "        print(\"value\", searching_value, \"is found \\n\" )  \n",
-    "  \n",
-    "  def remove_node(self, value_to_remove):\n",
-    "    current_node = self.get_head_node()\n",
+    "    print(\"Value\", searching_value, \"is not found in the list.\\n\")\n",
+    "    return False\n",
     "\n",
-    "    if current_node.get_value() == value_to_remove:\n",
-    "        self.head_node = current_node.get_next_node()\n",
-    "        print(\"Value\",value_to_remove,\"is removed, and here is the updated list:\")\n",
-    "        self.print()\n",
-    "        return\n",
+    "  def remove_node(self, key_to_remove, search_type=\"value\"):\n",
+    "   current_node = self.get_head_node()\n",
     "\n",
-    "    while current_node:\n",
-    "        next_node = current_node.get_next_node()\n",
+    "   # Handle case when list is empty\n",
+    "   if not current_node:\n",
+    "    print(\"List is empty.\")\n",
+    "    return\n",
     "\n",
-    "        if next_node and next_node.get_value() == value_to_remove:\n",
-    "            current_node.set_next_node(next_node.get_next_node())\n",
-    "            print(\"Value\",value_to_remove,\"is removed, and here is the updated list:\")\n",
-    "            self.print()\n",
-    "            return\n",
+    "   # Check if the head node's attribute matches\n",
+    "   if (search_type == \"value\" and current_node.value == key_to_remove) or (search_type == \"letter\" and current_node.letter == key_to_remove):\n",
+    "    self.head_node = current_node.get_next_node()\n",
+    "    print(f\"Node with {search_type} {key_to_remove} is removed, and here is the updated list: \\n\")\n",
+    "    self.display()\n",
+    "    return\n",
     "\n",
-    "        current_node = next_node\n",
-    "    print(\"Value\",value_to_remove,\"is not found in the list.\")\n",
+    "   while current_node:\n",
+    "    next_node = current_node.get_next_node()\n",
     "\n",
+    "    if next_node and ((search_type == \"value\" and next_node.value == key_to_remove) or (search_type == \"letter\" and next_node.letter == key_to_remove)):\n",
+    "     current_node.set_next_node(next_node.get_next_node())\n",
+    "     print(f\"Node with {search_type} {key_to_remove} is removed, and here is the updated list: \\n\")\n",
+    "     self.display()\n",
+    "     return\n",
     "\n",
-    "ll = LinkedList(2)\n",
-    "ll.insert_beginning(3)\n",
-    "ll.insert_beginning(4)\n",
-    "ll.insert_beginning(5)\n",
-    "ll.insert_beginning(6)\n",
-    "ll.print()\n",
+    "    current_node = next_node\n",
     "\n",
+    "   print(f\"Node with {search_type} {key_to_remove} is not found in the list. \\n\")\n",
     "\n",
+    "#Ex2 Creating linked list with 5 objects\n",
+    "ll = LinkedList()\n",
+    "ll.insert_beginning(2,\"a\")\n",
+    "ll.insert_beginning(3,\"b\")\n",
+    "ll.insert_beginning(4,\"c\")\n",
+    "ll.insert_beginning(5,\"d\")\n",
+    "ll.insert_beginning(6,\"e\")\n",
+    "ll.display()\n",
     "\n",
-    "ll.search(5)\n",
-    "ll.search(7)\n",
+    "#Ex3 Checking searching method\n",
+    "ll.search(5, search_type=\"value\")\n",
+    "ll.search(7, search_type=\"value\")\n",
     "\n",
-    "\n",
-    "ll.remove_node(5)\n",
-    "ll.remove_node(9)\n",
     "\n",
     "#Ex4\n",
-    "ll.print()\n",
-    "ll.remove_node(6)\n",
-    "ll.remove_node(3)\n",
+    "ll.display()\n",
+    "ll.remove_node(6, search_type=\"value\") #From the beginning \n",
+    "ll.remove_node(3, search_type=\"value\") #Removing from the middle \n",
+    "ll.remove_node(9, search_type=\"value\") #Trying to remove non-existing one\n",
+    "ll.remove_node(\"a\", search_type=\"letter\") #Removing with a letter now \n",
     "\n",
+    "#Ex5 Updated the list with new attribute above \n",
+    "#Ex6 Searching through different attributes\n",
+    "ll.search(\"a\", search_type=\"letter\")\n",
+    "ll.search(\"z\", search_type=\"letter\")\n",
     "\n",
+    "#Ex7,8 adding to end \n",
+    "ll.insert_end(69,\"x\")\n",
+    "ll.display()\n",
     "\n",
     "\n"
    ]
